[package]
name = "cumin"
version = "0.9.8"
authors = ["cympfh <cympfh@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
anyhow = "1.0"
nom = "6"
structopt = { version = "0.3", default-features = false }
wasm-bindgen = "0.2.63"

[[bin]]
name = "cuminc"
path = "src/bin/cuminc.rs"
